- MFH: Fixed weekdays adding/subtracting algorithm. - MFH: Fixed some ambiguities in the date parser. - MFH: Fixed bug #45529 (new DateTimeZone() and date_create()->getTimezone()   behave different). - MFH: Fixed bug #43452 (strings containing a weekday, or a number plus weekday   behaved incorrect of the current day-of-week was the same as the one in the   phrase). - MFH: Fixed a bug with the YYYY-MM format not resetting the day correctly. - MFH: Fixed a bug in the DateTime->modify() methods, it would not use the   advanced relative time strings. - MFH: Fixed a segfault - simply a forgotten return;